refactored user entity and related classes to use enums for role and status; implemented ApiResponse for consistent response structure